force-app/main/default/objects/SC_Monthly_Reporting__c/SC_Monthly_Reporting__c.object-meta.xml
<CustomObject>
    <description>STARTER COMPANY PROGRAM - Monthly Reporting</description>
    <label>SC Monthly Reporting</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>SC Monthly Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SC Monthly Reportings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>