force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <label>Advisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Patricio</fullName>
            </value>
            <value>
                <fullName>Vikas Jain</fullName>
            </value>
            <value>
                <fullName>Sandi Koitsis-Zigomanis</fullName>
            </value>
            <value>
                <fullName>David Cohen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>