force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Financial_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Financial_Incentive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Incentive</label>
    <referenceTo>Financial_Incentive__c</referenceTo>
    <relationshipLabel>SC Monthly Reportings</relationshipLabel>
    <relationshipName>SC_Monthly_Reportings</relationshipName>
    <type>Lookup</type>
</CustomField>