force-app/main/default/objects/SC_Monthly_Reporting__c/fields/If_yes_Value_of_that_Investment__c.field-meta.xml
<CustomField>
    <fullName>If_yes_Value_of_that_Investment__c</fullName>
    <description>What is the value of that investment</description>
    <inlineHelpText>What is the value of that investment</inlineHelpText>
    <label>If yes, Value of that Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>