force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Investment_made_in_Business_after_Grant__c.field-meta.xml
<CustomField>
    <fullName>Investment_made_in_Business_after_Grant__c</fullName>
    <description>In the last month, have you made investments in your business since receiving grant from City of Toronto? These could be investments in space, equipment or staff</description>
    <inlineHelpText>In the last month, have you made investments in your business since receiving grant from City of Toronto? These could be investments in space, equipment or staff</inlineHelpText>
    <label>Investment made in Business after Grant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>