force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Jobs_created_after_receiving_grant__c.field-meta.xml
<CustomField>
    <fullName>Jobs_created_after_receiving_grant__c</fullName>
    <description>Since receiving the grant, how many jobs have been created in the last month?</description>
    <inlineHelpText>Since receiving the grant, how many jobs have been created in the last month?</inlineHelpText>
    <label>Jobs created after receiving grant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>