force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_10_Online_Marketing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_10_Online_Marketing_Completed__c</fullName>
    <description>Lecture #10 – Online Marketing Completed?</description>
    <inlineHelpText>Lecture #10 – Online Marketing Completed?</inlineHelpText>
    <label>Lecture#10–Online Marketing Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>