force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_11_Number_of_Hours_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Lecture_11_Number_of_Hours_of_Training__c</fullName>
    <label>Lecture#11-Number of Hours of Training</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>