force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_12_Crowdfunding_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_12_Crowdfunding_Completed__c</fullName>
    <description>Lecture#12–Crowdfunding Completed?</description>
    <inlineHelpText>Lecture#12–Crowdfunding Completed?</inlineHelpText>
    <label>Lecture#12–Crowdfunding Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>