force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_14_Facebook_Marketing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_14_Facebook_Marketing_Completed__c</fullName>
    <label>Lecture#14–Facebook Marketing Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>