force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_1_Business_Plan_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_1_Business_Plan_Completed__c</fullName>
    <description>Lecture #1 – Develop A Business Plan Completed?</description>
    <inlineHelpText>Lecture #1 – Develop A Business Plan Completed?</inlineHelpText>
    <label>Lecture#1-Business Plan Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>