force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_2_Cash_Flow_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_2_Cash_Flow_Completed__c</fullName>
    <description>Lecture #2 – Cash Flow Completed?</description>
    <inlineHelpText>Lecture #2 – Cash Flow Completed?</inlineHelpText>
    <label>Lecture #2 – Cash Flow Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>