force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_3_Pricing_Bookkeeping_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_3_Pricing_Bookkeeping_Completed__c</fullName>
    <description>Lecture #3 – Pricing &amp; Bookkeeping Completed?</description>
    <inlineHelpText>Lecture #3 – Pricing &amp; Bookkeeping Completed?</inlineHelpText>
    <label>Lecture#3-Pricing&amp;Bookkeeping Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>