force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_4_Market_Research_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_4_Market_Research_Completed__c</fullName>
    <description>Lecture #4 – Market Research &amp; Marketing Completed?</description>
    <inlineHelpText>Lecture #4 – Market Research &amp; Marketing Completed?</inlineHelpText>
    <label>Lecture#4–Market Research Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>