force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_5_Ownership_Legal_Req_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_5_Ownership_Legal_Req_Completed__c</fullName>
    <description>Lecture #5 – Business Ownership &amp; Legal Requirements Completed?</description>
    <inlineHelpText>Lecture #5 – Business Ownership &amp; Legal Requirements Completed?</inlineHelpText>
    <label>Lecture#5-Ownership&amp;Legal Req Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>