force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_6_Managing_Business_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_6_Managing_Business_Completed__c</fullName>
    <description>Lecture #6 – Managing Your Business Completed?</description>
    <inlineHelpText>Lecture #6 – Managing Your Business Completed?</inlineHelpText>
    <label>Lecture#6–Managing Business Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>