force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_7_Financial_Statement_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_7_Financial_Statement_Completed__c</fullName>
    <description>Lecture #7 – Financial Statements Completed?</description>
    <inlineHelpText>Lecture #7 – Financial Statements Completed?</inlineHelpText>
    <label>Lecture#7-Financial Statement Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>