force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_8_People_Management_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_8_People_Management_Completed__c</fullName>
    <description>Lecture #8 – People Management Completed?</description>
    <inlineHelpText>Lecture #8 – People Management Completed?</inlineHelpText>
    <label>Lecture#8–People Management Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>