force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Lecture_9_Sales_Prospecting_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lecture_9_Sales_Prospecting_Completed__c</fullName>
    <description>Lecture #9 – Sales &amp; Prospecting Completed?</description>
    <inlineHelpText>Lecture #9 – Sales &amp; Prospecting Completed?</inlineHelpText>
    <label>Lecture#9–Sales &amp; Prospecting Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>