force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Mentor_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Meeting__c</fullName>
    <label>Mentor Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>