force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Mentor_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Meeting_Date__c</fullName>
    <label>Mentor Meeting Date</label>
    <type>Date</type>
</CustomField>