force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Milestone_Completed_Stage__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Completed_Stage__c</fullName>
    <label>Milestone Completed Stage?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Milestone 1</fullName>
            </value>
            <value>
                <fullName>Milestone 2</fullName>
            </value>
            <value>
                <fullName>Milestone 3</fullName>
            </value>
            <value>
                <fullName>Milestone 4</fullName>
            </value>
            <value>
                <fullName>Milestone 5</fullName>
            </value>
            <value>
                <fullName>Milestone 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>