force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Milestones_Completed__c.field-meta.xml
<CustomField>
    <fullName>Milestones_Completed__c</fullName>
    <label>Milestones Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>