force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Module_2_Number_of_Hours_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Module_2_Number_of_Hours_of_Training__c</fullName>
    <label>Module #2-Number of Hours of Training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>