force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Module_2_Store_Design_and_Merchandising__c.field-meta.xml
<CustomField>
    <fullName>Module_2_Store_Design_and_Merchandising__c</fullName>
    <label>Module #2-Store Design and Merchandising</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>