force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Module_4_Inventory_Mgmnt_and_Supply__c.field-meta.xml
<CustomField>
    <fullName>Module_4_Inventory_Mgmnt_and_Supply__c</fullName>
    <label>Module #4-Inventory Mgmnt and Supply?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>