force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Module_5_Customer_Retention_and_Exp__c.field-meta.xml
<CustomField>
    <fullName>Module_5_Customer_Retention_and_Exp__c</fullName>
    <label>Module#5-Customer Retention and Exp?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>