force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Module_6_Managing_Staff_Completed__c.field-meta.xml
<CustomField>
    <fullName>Module_6_Managing_Staff_Completed__c</fullName>
    <label>Module #6-Managing Staff Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>