force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Number_of_Hours_for_Mentoring__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_for_Mentoring__c</fullName>
    <label>Number of Hours for Mentoring</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>