force-app/main/default/objects/SC_Monthly_Reporting__c/fields/SS_Hours_of_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>SS_Hours_of_Training_Completed__c</fullName>
    <label>SS-Hours of Training Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>