force-app/main/default/objects/SC_Monthly_Reporting__c/fields/SS_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>SS_Training_Completed__c</fullName>
    <label>SS-Training Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>