force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Starter_Com_Networking_Session_Attended__c.field-meta.xml
<CustomField>
    <fullName>Starter_Com_Networking_Session_Attended__c</fullName>
    <description>Starter Company Networking Session Attended?</description>
    <inlineHelpText>Starter Company Networking Session Attended?</inlineHelpText>
    <label>Starter Com Networking Session Attended?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>