force-app/main/default/objects/SC_Monthly_Reporting__c/fields/Starter_Company__c.field-meta.xml
<CustomField>
    <fullName>Starter_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master detail lookup of starter Company.
Master- Starter Company
Detail- SC Monthly Reporting</description>
    <label>Starter Company</label>
    <referenceTo>Starter_Company_Clients__c</referenceTo>
    <relationshipLabel>SC Monthly Reportings</relationshipLabel>
    <relationshipName>SC_Monthly_Reportings</relationshipName>
    <type>Lookup</type>
</CustomField>