force-app/main/default/objects/SC_Monthly_Reporting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Starter_Company__c</columns>
    <columns>Reporting_Month__c</columns>
    <columns>Total_Training_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>